WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110389
Incorrect rendering for flex boxes with percentage height in a table cell
https://bugs.webkit.org/show_bug.cgi?id=110389
Summary
Incorrect rendering for flex boxes with percentage height in a table cell
Christian Biesinger
Reported
2013-02-20 14:54:40 PST
See the attached testcase - all three tables should look the same.
Attachments
Testcase
(702 bytes, text/html)
2013-02-20 14:54 PST
,
Christian Biesinger
no flags
Details
Patch
(6.53 KB, patch)
2013-02-20 15:59 PST
,
Christian Biesinger
no flags
Details
Formatted Diff
Diff
Patch
(6.80 KB, patch)
2013-02-20 16:30 PST
,
Christian Biesinger
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Christian Biesinger
Comment 1
2013-02-20 14:54:55 PST
Created
attachment 189385
[details]
Testcase
Christian Biesinger
Comment 2
2013-02-20 15:44:09 PST
I'll attach a potential patch. For reference, the line I'm changing was added in 5660d13316e46fe3ba8356f3102ef04a1ae99fc8 (
r110583
),
http://trac.webkit.org/changeset/110583
Christian Biesinger
Comment 3
2013-02-20 15:59:20 PST
Created
attachment 189399
[details]
Patch
Tony Chang
Comment 4
2013-02-20 16:15:40 PST
Comment on
attachment 189399
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=189399&action=review
> LayoutTests/css3/flexbox/flex-percentage-height-in-table-standards-mode.html:5 > + #newflex { display: -webkit-flex; display: flex; height: 75%; }
Please use LayoutTests/css3/flexbox/resources/flexbox.css for the new flexbox display value. It let's us add -ms or other vendor prefixed values going forward.
> LayoutTests/css3/flexbox/flex-percentage-height-in-table-standards-mode.html:11 > +
It would be nice to have some text explaining what you should see.
> LayoutTests/css3/flexbox/flex-percentage-height-in-table.html:5 > + #newflex { display: -webkit-flex; display: flex; height: 75%; }
Same comments apply to this test too.
Christian Biesinger
Comment 5
2013-02-20 16:30:39 PST
Created
attachment 189408
[details]
Patch
WebKit Review Bot
Comment 6
2013-02-20 17:24:27 PST
Comment on
attachment 189408
[details]
Patch Clearing flags on attachment: 189408 Committed
r143542
: <
http://trac.webkit.org/changeset/143542
>
WebKit Review Bot
Comment 7
2013-02-20 17:24:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug