Incorrect rendering for flex boxes with percentage height in a table cell https://bugs.webkit.org/show_bug.cgi?id=110389

Patch by Christian Biesinger <cbiesinger@chromium.org> on 2013-02-20
Reviewed by Tony Chang.

Source/WebCore:

Tests: css3/flexbox/flex-percentage-height-in-table-standards-mode.html
       css3/flexbox/flex-percentage-height-in-table.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutAndPlaceChildren):
Always update the logical height of the flex box, not just when it is
auto. If necessary, the later updateLogicalHeight() call will adjust
it.

LayoutTests:

* css3/flexbox/flex-percentage-height-in-table-expected.html: Added.
* css3/flexbox/flex-percentage-height-in-table-standards-mode-expected.html: Added.
* css3/flexbox/flex-percentage-height-in-table-standards-mode.html: Added.
* css3/flexbox/flex-percentage-height-in-table.html: Added.

Canonical link: https://commits.webkit.org/128694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143542 268f45cc-cd09-0410-ab3c-d52691b4dbfc